[package]
name = "text-to-morse-code"
version = "0.1.0"
description = "This is a simple program that convertes text into morse code beeps"
authors = ["ninenine"]
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
once_cell = "1.17.0"
rodio = "0.16.0"
